--- a/src/guides/main/running-full-node-nitro-arbitrum-university-683.yaml
+++ b/src/guides/main/running-full-node-nitro-arbitrum-university-683.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: How to run a full node (Nitro)?
-created: '2023-11-06T15:21:42.221Z'
+created: '2023-11-06T15:21:57.019Z'
 guideType: onboarding
 key: running-full-node-nitro-arbitrum-university-683
 name: Running Full Node (Nitro)
@@ -160,7 +160,7 @@ steps:
     stepItems: []
     uuid: e97ba39d-652f-4fb7-b5cc-0a35b1d7d014
   - content: >-
-      TODO - Give descriptions of some of the optional parameters and give a
+      ### TODO - Give descriptions of some of the optional parameters and give a
       simpler table
     name: Optional Parameters
     stepItems: []
