update guide Useful Tools

--- a/src/guides/main/useful-tools-arbitrum-university-260.yaml
+++ b/src/guides/main/useful-tools-arbitrum-university-260.yaml
@@ -1,12 +1,16 @@
 categories: []
 content: Understanding the Useful Tools in Arbitrum
-created: '2023-11-06T12:42:24.891Z'
+created: '2023-11-06T15:23:38.576Z'
 guideType: onboarding
 key: useful-tools-arbitrum-university-260
 name: Useful Tools
 publishStatus: Live
 steps:
   - content: >+
+      ### TODO - Give an introduction to the guide
+
+
+
       ## RPC Endpoints
 
       RPC endpoints facilitate interaction with various Arbitrum chains.
