--- a/src/guides/main/running-full-node-nitro-arbitrum-university-683.yaml
+++ b/src/guides/main/running-full-node-nitro-arbitrum-university-683.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: How to run a full node (Nitro)?
-created: '2023-11-06T16:20:37.516Z'
+created: '2023-11-06T16:21:32.453Z'
 guideType: onboarding
 key: running-full-node-nitro-arbitrum-university-683
 name: Running Full Node (Nitro)
@@ -54,13 +54,13 @@ steps:
 
       To set up a Nitro full node (no archival), you would require:
 
-      RAM: 8-16 GB
+      - RAM: 8-16 GB
 
-      CPU: 2-4 core CPU (For AWS: t3 xLarge)
+      - CPU: 2-4 core CPU (For AWS: t3 xLarge)
 
-      Storage: Minimum 1.2TB SSD (make sure it is extendable)
+      - Storage: Minimum 1.2TB SSD (make sure it is extendable)
 
-      Estimated Growth Rate: around 3 GB per day
+      - Estimated Growth Rate: around 3 GB per day
        
       #### Software Prerequisites
 
