update guide Arbitrum Tools

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -10,3 +10,4 @@ guides:
   - running-full-node-nitro-arbitrum-university-683.yaml
   - useful-tools-arbitrum-university-260.yaml
   - running-a-validator-arbitrum-university-967.yaml
+  - arbitrum-tools-arbitrum-university-530.yaml
