--- a/src/guides/main/arbitrum-tools-arbitrum-university-530.yaml
+++ b/src/guides/main/arbitrum-tools-arbitrum-university-530.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Understanding the Useful Tools in Arbitrum
-created: '2023-11-06T17:39:26.036Z'
+created: '2023-11-06T17:41:03.531Z'
 guideType: onboarding
 key: arbitrum-tools-arbitrum-university-530
 name: Arbitrum Tools
@@ -15,11 +15,9 @@ steps:
       conduits through which we interact with blockchain networks; debugging
       tools, which are indispensable for identifying and rectifying code issues;
       monitoring tools and block explorers, which offer insights and
-      transparency into blockchain transactions and states; and development
-      frameworks, which provide structured environments for efficient smart
-      contract and dApp creation. This guide aims to equip you with the
-      knowledge and resources to navigate the landscape of blockchain technology
-      effectively.
+      transparency into blockchain transactions and states. This guide aims to
+      equip you with the knowledge and resources to navigate the landscape of
+      blockchain technology effectively.
 
 
       ## RPC Endpoints
